# mipt-sle-4sem

Dense_CSRMatrix/: CMakeLists.txt  a.out
Dense_CSRMatrix/src/: CSRMatrix.h  DenseMatrix.h  vector.h
Dense_CSRMatrix/tests/: CMakeLists.txt  test_CSR.cpp  test_Dense.cpp
Solvers/: CMakeLists.txt
Solvers/src/: CMakeLists.txt  chebyshev.h  fixed_point_it.h  gauss_seidel.h  gradient_descent.h  jacobi.h  simm_gauss_seidel.h
Solvers/tests/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp
TridiagonalMatrixAlgorithm/: CMakeLists.txt
TridiagonalMatrixAlgorithm/src/: CMakeLists.txt
TridiagonalMatrixAlgorithm/src/algorithm/: algorithm.cpp  algorithm.h
TridiagonalMatrixAlgorithm/src/algorithm/include/rr/: algorithm.h
TridiagonalMatrixAlgorithm/tests/: CMakeLists.txt  main.cpp
